[package]
name = "cathedral-33t"
version = "1.0.0"
edition = "2021"

[workspace]


[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
rand = "0.8"

ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"
rayon = "1.8"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
bincode = "1.3"

[dev-dependencies]
criterion = "0.5"
mockito = "1.0"

[[bin]]
name = "train"
path = "src/bin/train.rs"
