[package]
name = "hyperon-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Cathedral ARKHE Architect"]
description = "Bridge between OpenCog Hyperon and Cathedral ARKHE"
license = "MIT"

[dependencies]
hyperon = { path = "../mock_hyperon" }
hex = "0.4"
anyhow = "1.0"

[lib]
crate-type = ["lib", "cdylib"]
