[package]
name = "metacognitive-regulator"
version = "0.1.0"
edition = "2021"
authors = ["Cathedral ARKHE Architect"]
description = "Metacognition as Reward (MaR) regulator"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[lib]
crate-type = ["lib"]
