[package]
name = "arkhe-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

nexus-sdk = { workspace = true, optional = true }
nexus-core = { workspace = true, optional = true }
nexus-network = { workspace = true, optional = true }

[build-dependencies]
tonic-build = "0.12"
